# c-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.me  compile_flags.txt
include/: arena.h  cimgui.h  components.h  console.h  dynamicarray.h  ecs.h  event.h  serialeditor.h  util.h  windows_utils.h
lib/: README.txt
lib/imgui/: rlImGui.cpp  rlImGui.h  rlImGuiColors.h
lib/imgui/extras/: FA6FreeSolidFontData.h  IconsFontAwesome6.h
src/: arena.c  cgame.c  console.c  ecs.c  editor.c  editorimgui.c  event.c  serialeditor.c  windows_utils.c
